fuzzy/storage/fcl/FCLParser.py
# $ANTLR 3.1.2 FCL.g 2009-09-27 20:18:17

import sys
from antlr3 import *
from antlr3.compat import set, frozenset
         
#docstring
"""Parser for reading FCL by the pyfuzzy package."""
__revision__ = "$Id: FCLParser.py,v 1.5 2009-09-27 18:20:00 rliebscher Exp $"
import fuzzy.System
import fuzzy.InputVariable
import fuzzy.OutputVariable
import fuzzy.Adjective
import fuzzy.set.Polygon
import fuzzy.set.Singleton
import fuzzy.defuzzify
import fuzzy.defuzzify.Dict
import fuzzy.fuzzify
import fuzzy.fuzzify.Plain
import fuzzy.fuzzify.Dict
import fuzzy.operator.Not
import fuzzy.operator.Input
import fuzzy.operator.Compound
import fuzzy.Rule
import fuzzy.norm.Min
import fuzzy.norm.Max

def getNorm(name,p=None):
    """Get an instance of a fuzzy norm with given name.
    Normally looks into the fuzzy.norm package for a suitable class.
    """
    m = __import__("fuzzy.norm."+name,fromlist=[name])
    c = m.__dict__[name]
    if p is None:
        return c()
    else:
        return c(p)

def getDefuzzificationMethod(name):
    """Get an instance of a defuzzification method with given name.
    Normally looks into the fuzzy.defuzzify package for a suitable class.
    """
    m = __import__("fuzzy.defuzzify."+name,fromlist=[name])
    c = m.__dict__[name]
    return c()

# container for definitions of operator/norm pairs
_operators = {
    "AND":fuzzy.norm.Min.Min(),
    "OR":fuzzy.norm.Max.Max()
    }

def defineOperator(name,norm):
    """Defines a operator (AND,OR,...) to use a given norm."""
    _operators[name] = norm
    #print "defineOperator ",name,norm

def getOperator(name):
    """Get the norm for previous defined operator name."""
    #print "getOperator ",name
    import copy
    return copy.deepcopy(_operators[name])

_structs = {}

def defineStructType(name):
    """Remember name of a struct definition"""
    _structs[name] = []

def defineStructTypeElement(name,elem):
    """Add a struct element"""
    _structs[name].append(elem)

def getStructType(name):
    """Get list of elements of a struct definition"""
    return _structs[name]



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
T__29=29
T__28=28
Real_literal=9
OR_=6
T__27=27
T__26=26
T__25=25
T__24=24
LETTER=10
T__23=23
T__22=22
T__21=21
T__20=20
AND_=7
EOF=-1
Identifier=4
T__55=55
T__56=56
T__19=19
T__57=57
T__58=58
T__16=16
T__51=51
T__15=15
T__52=52
T__18=18
T__53=53
T__54=54
T__17=17
Integer_literal_wo_sign=11
T__14=14
T__59=59
DIGIT=5
COMMENT=13
T__50=50
T__42=42
T__43=43
T__40=40
T__41=41
T__46=46
T__47=47
T__44=44
T__45=45
T__48=48
T__49=49
T__30=30
T__31=31
T__32=32
WS=12
T__33=33
T__34=34
Integer_literal=8
T__35=35
T__36=36
T__37=37
T__38=38
T__39=39

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "Identifier", "DIGIT", "OR_", "AND_", "Integer_literal", "Real_literal", 
    "LETTER", "Integer_literal_wo_sign", "WS", "COMMENT", "'FUNCTION_BLOCK'", 
    "'END_FUNCTION_BLOCK'", "'STRUCT'", "'END_STRUCT'", "':'", "'REAL'", 
    "';'", "'VAR_INPUT'", "'END_VAR'", "'VAR_OUTPUT'", "'FUZZIFY'", "'END_FUZZIFY'", 
    "'DEFUZZIFY'", "'END_DEFUZZIFY'", "'RULEBLOCK'", "'END_RULEBLOCK'", 
    "'OPTION'", "'END_OPTION'", "'TERM'", "':='", "'('", "','", "')'", "'METHOD'", 
    "'DEFAULT'", "'NC'", "'RANGE'", "'..'", "'['", "']'", "'MIN'", "'PROD'", 
    "'BDIF'", "'MAX'", "'ASUM'", "'BSUM'", "'ACT'", "'ACCU'", "'NSUM'", 
    "'NOT'", "'IS'", "'.'", "'RULE'", "'IF'", "'THEN'", "'WITH'"
]




class FCLParser(Parser):
    grammarFileName = "FCL.g"
    antlr_version = version_str_to_tuple("3.1.2")
    antlr_version_str = "3.1.2"
    tokenNames = tokenNames

    def __init__(self, input, state=None):
        if state is None:
            state = RecognizerSharedState()

        Parser.__init__(self, input, state)




               
        self.System = None




                


        

              
    # test



    # $ANTLR start "main"
    # FCL.g:111:1: main returns [system] : function_block_declaration ;
    def main(self, ):

        system = None

        try:
            try:
                # FCL.g:111:23: ( function_block_declaration )
                # FCL.g:111:25: function_block_declaration
                pass 
                #action start
                self.System = None;
                #action end
                self._state.following.append(self.FOLLOW_function_block_declaration_in_main55)
                self.function_block_declaration()

                self._state.following.pop()
                #action start
                system =  self.System
                #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return system

    # $ANTLR end "main"


    # $ANTLR start "function_block_declaration"
    # FCL.g:113:1: function_block_declaration : 'FUNCTION_BLOCK' function_block_name ( type_definition )* ( fb_io_var_declarations )* function_block_body 'END_FUNCTION_BLOCK' EOF ;
    def function_block_declaration(self, ):

        function_block_name1 = None


        try:
            try:
                # FCL.g:114:3: ( 'FUNCTION_BLOCK' function_block_name ( type_definition )* ( fb_io_var_declarations )* function_block_body 'END_FUNCTION_BLOCK' EOF )
                # FCL.g:115:5: 'FUNCTION_BLOCK' function_block_name ( type_definition )* ( fb_io_var_declarations )* function_block_body 'END_FUNCTION_BLOCK' EOF
                pass 
                self.match(self.input, 14, self.FOLLOW_14_in_function_block_declaration71)
                self._state.following.append(self.FOLLOW_function_block_name_in_function_block_declaration77)
                function_block_name1 = self.function_block_name()

                self._state.following.pop()
                #action start
                self.System = fuzzy.System.System(description=((function_block_name1 is not None) and [self.input.toString(function_block_name1.start,function_block_name1.stop)] or [None])[0]); 
                #action end
                # FCL.g:117:5: ( type_definition )*
                while True: #loop1
                    alt1 = 2
                    LA1_0 = self.input.LA(1)

                    if (LA1_0 == 16) :
                        alt1 = 1


                    if alt1 == 1:
                        # FCL.g:117:5: type_definition
                        pass 
                        self._state.following.append(self.FOLLOW_type_definition_in_function_block_declaration85)
                        self.type_definition()

                        self._state.following.pop()


                    else:
                        break #loop1


                # FCL.g:118:5: ( fb_io_var_declarations )*
                while True: #loop2
                    alt2 = 2
                    LA2_0 = self.input.LA(1)

                    if (LA2_0 == 21 or LA2_0 == 23) :
                        alt2 = 1


                    if alt2 == 1:
                        # FCL.g:118:5: fb_io_var_declarations
                        pass 
                        self._state.following.append(self.FOLLOW_fb_io_var_declarations_in_function_block_declaration92)
                        self.fb_io_var_declarations()

                        self._state.following.pop()


                    else:
                        break #loop2


                self._state.following.append(self.FOLLOW_function_block_body_in_function_block_declaration100)
                self.function_block_body()

                self._state.following.pop()
                self.match(self.input, 15, self.FOLLOW_15_in_function_block_declaration106)
                self.match(self.input, EOF, self.FOLLOW_EOF_in_function_block_declaration112)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return 

    # $ANTLR end "function_block_declaration"


    # $ANTLR start "type_definition"
    # FCL.g:125:1: type_definition : 'STRUCT' Identifier ( struct_element[$Identifier.text] )+ 'END_STRUCT' ;
    def type_definition(self, ):

        Identifier2 = None

        try:
            try:
                # FCL.g:126:3: ( 'STRUCT' Identifier ( struct_element[$Identifier.text] )+ 'END_STRUCT' )
                # FCL.g:126:6: 'STRUCT' Identifier ( struct_element[$Identifier.text] )+ 'END_STRUCT'
                pass 
                self.match(self.input, 16, self.FOLLOW_16_in_type_definition126)
                Identifier2=self.match(self.input, Identifier, self.FOLLOW_Identifier_in_type_definition128)
                #action start
                defineStructType(Identifier2.text); 
                #action end
                # FCL.g:126:66: ( struct_element[$Identifier.text] )+
                cnt3 = 0
                while True: #loop3
                    alt3 = 2
                    LA3_0 = self.input.LA(1)

                    if (LA3_0 == Identifier) :
                        alt3 = 1


                    if alt3 == 1:
                        # FCL.g:126:66: struct_element[$Identifier.text]
                        pass 
                        self._state.following.append(self.FOLLOW_struct_element_in_type_definition132)
                        self.struct_element(Identifier2.text)

                        self._state.following.pop()


                    else:
                        if cnt3 >= 1:
                            break #loop3

                        eee = EarlyExitException(3, self.input)
                        raise eee

                    cnt3 += 1


                self.match(self.input, 17, self.FOLLOW_17_in_type_definition136)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return 

    # $ANTLR end "type_definition"


    # $ANTLR start "struct_element"
    # FCL.g:129:1: struct_element[struct_name] : Identifier ':' 'REAL' ';' ;
    def struct_element(self, struct_name):

        Identifier3 = None

        try:
            try:
                # FCL.g:130:3: ( Identifier ':' 'REAL' ';' )
                # FCL.g:130:6: Identifier ':' 'REAL' ';'
                pass 
                Identifier3=self.match(self.input, Identifier, self.FOLLOW_Identifier_in_struct_element151)
                self.match(self.input, 18, self.FOLLOW_18_in_struct_element153)
                self.match(self.input, 19, self.FOLLOW_19_in_struct_element155)
                self.match(self.input, 20, self.FOLLOW_20_in_struct_element157)
                #action start
                defineStructTypeElement(struct_name,Identifier3.text);
                #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return 

    # $ANTLR end "struct_element"


    # $ANTLR start "fb_io_var_declarations"
    # FCL.g:133:1: fb_io_var_declarations : ( input_declarations | output_declarations );
    def fb_io_var_declarations(self, ):

        try:
            try:
                # FCL.g:134:3: ( input_declarations | output_declarations )
                alt4 = 2
                LA4_0 = self.input.LA(1)

                if (LA4_0 == 21) :
                    alt4 = 1
                elif (LA4_0 == 23) :
                    alt4 = 2
                else:
                    nvae = NoViableAltException("", 4, 0, self.input)

                    raise nvae

                if alt4 == 1:
                    # FCL.g:134:5: input_declarations
                    pass 
                    self._state.following.append(self.FOLLOW_input_declarations_in_fb_io_var_declarations172)
                    self.input_declarations()

                    self._state.following.pop()


                elif alt4 == 2:
                    # FCL.g:135:5: output_declarations
                    pass 
                    self._state.following.append(self.FOLLOW_output_declarations_in_fb_io_var_declarations178)
                    self.output_declarations()

                    self._state.following.pop()



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return 

    # $ANTLR end "fb_io_var_declarations"


    # $ANTLR start "input_declarations"
    # FCL.g:138:1: input_declarations : 'VAR_INPUT' ( var_decl[0] )+ 'END_VAR' ;
    def input_declarations(self, ):

        try:
            try:
                # FCL.g:138:20: ( 'VAR_INPUT' ( var_decl[0] )+ 'END_VAR' )
                # FCL.g:138:22: 'VAR_INPUT' ( var_decl[0] )+ 'END_VAR'
                pass 
                self.match(self.input, 21, self.FOLLOW_21_in_input_declarations189)
                # FCL.g:138:34: ( var_decl[0] )+
                cnt5 = 0
                while True: #loop5
                    alt5 = 2
                    LA5_0 = self.input.LA(1)

                    if (LA5_0 == Identifier) :
                        alt5 = 1


                    if alt5 == 1:
                        # FCL.g:138:34: var_decl[0]
                        pass 
                        self._state.following.append(self.FOLLOW_var_decl_in_input_declarations191)
                        self.var_decl(0)

                        self._state.following.pop()


                    else:
                        if cnt5 >= 1:
                            break #loop5

                        eee = EarlyExitException(5, self.input)
                        raise eee

                    cnt5 += 1


                self.match(self.input, 22, self.FOLLOW_22_in_input_declarations195)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return 

    # $ANTLR end "input_declarations"


    # $ANTLR start "output_declarations"
    # FCL.g:139:1: output_declarations : 'VAR_OUTPUT' ( var_decl[1] )+ 'END_VAR' ;
    def output_declarations(self, ):

        try:
            try:
                # FCL.g:139:21: ( 'VAR_OUTPUT' ( var_decl[1] )+ 'END_VAR' )
                # FCL.g:139:23: 'VAR_OUTPUT' ( var_decl[1] )+ 'END_VAR'
                pass 
                self.match(self.input, 23, self.FOLLOW_23_in_output_declarations203)
                # FCL.g:139:36: ( var_decl[1] )+
                cnt6 = 0
                while True: #loop6
                    alt6 = 2
                    LA6_0 = self.input.LA(1)

                    if (LA6_0 == Identifier) :
                        alt6 = 1


                    if alt6 == 1:
                        # FCL.g:139:36: var_decl[1]
                        pass 
                        self._state.following.append(self.FOLLOW_var_decl_in_output_declarations205)
                        self.var_decl(1)

                        self._state.following.pop()


                    else:
                        if cnt6 >= 1:
                            break #loop6

                        eee = EarlyExitException(6, self.input)
                        raise eee

                    cnt6 += 1


                self.match(self.input, 22, self.FOLLOW_22_in_output_declarations209)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return 

    # $ANTLR end "output_declarations"


    # $ANTLR start "var_decl"
    # FCL.g:142:1: var_decl[output_var] : Identifier ':' type ';' ;
    def var_decl(self, output_var):

        Identifier5 = None
        type4 = None


        try:
            try:
                # FCL.g:143:3: ( Identifier ':' type ';' )
                # FCL.g:144:3: Identifier ':' type ';'
                pass 
                Identifier5=self.match(self.input, Identifier, self.FOLLOW_Identifier_in_var_decl223)
                self.match(self.input, 18, self.FOLLOW_18_in_var_decl227)
                self._state.following.append(self.FOLLOW_type_in_var_decl231)
                type4 = self.type()

                self._state.following.pop()
                self.match(self.input, 20, self.FOLLOW_20_in_var_decl235)
                #action start
                 
                if output_var == 0:
                    var=fuzzy.InputVariable.InputVariable()
                    if type4 is not None:
                        # set fuzzification method to dictionary input
                        var.fuzzify = fuzzy.fuzzify.Dict.Dict();
                        # create adjectives for all struct members
                        for i in type4:
                            var.adjectives[i] = fuzzy.Adjective.Adjective(fuzzy.set.Set.Set())
                    else:
                        # default is the plain fuzzification
                        var.fuzzify = fuzzy.fuzzify.Plain.Plain();
                else:
                    var = fuzzy.OutputVariable.OutputVariable()
                    if type4 is not None:
                        # set defuzzification method to dictionary output
                        var.defuzzify = fuzzy.defuzzify.Dict.Dict();
                        # create adjectives for all struct members
                        for i in type4:
                            var.adjectives[i] = fuzzy.Adjective.Adjective(fuzzy.set.Set.Set())
                self.System.variables[Identifier5.text]=var;

                #action end




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return 

    # $ANTLR end "var_decl"


    # $ANTLR start "type"
    # FCL.g:172:1: type returns [struct_type] : ( 'REAL' | Identifier );
    def type(self, ):

        struct_type = None

        Identifier6 = None

        try:
            try:
                # FCL.g:173:3: ( 'REAL' | Identifier )
                alt7 = 2
                LA7_0 = self.input.LA(1)

                if (LA7_0 == 19) :
                    alt7 = 1
                elif (LA7_0 == Identifier) :
                    alt7 = 2
                else:
                    nvae = NoViableAltException("", 7, 0, self.input)

                    raise nvae

                if alt7 == 1:
                    # FCL.g:174:3: 'REAL'
                    pass 
                    self.match(self.input, 19, self.FOLLOW_19_in_type254)
                    #action start
                    struct_type =  None 
                    #action end


                elif alt7 == 2:
                    # FCL.g:176:3: Identifier
                    pass 
                    Identifier6=self.match(self.input, Identifier, self.FOLLOW_Identifier_in_type264)
                    #action start
                    struct_type =  getStructType(Identifier6.text) 
                    #action end



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return struct_type

    # $ANTLR end "type"


    # $ANTLR start "function_block_body"
    # FCL.g:182:1: function_block_body : ( fuzzify_block )* ( defuzzify_block )* ( rule_block )* ( option_block )* ;
    def function_block_body(self, ):

        try:
            try:
                # FCL.g:183:3: ( ( fuzzify_block )* ( defuzzify_block )* ( rule_block )* ( option_block )* )
                # FCL.g:184:5: ( fuzzify_block )* ( defuzzify_block )* ( rule_block )* ( option_block )*
                pass 
                # FCL.g:184:5: ( fuzzify_block )*
                while True: #loop8
                    alt8 = 2
                    LA8_0 = self.input.LA(1)

                    if (LA8_0 == 24) :
                        alt8 = 1


                    if alt8 == 1:
                        # FCL.g:184:5: fuzzify_block
                        pass 
                        self._state.following.append(self.FOLLOW_fuzzify_block_in_function_block_body286)
                        self.fuzzify_block()

                        self._state.following.pop()


                    else:
                        break #loop8


                # FCL.g:185:5: ( defuzzify_block )*
                while True: #loop9
                    alt9 = 2
                    LA9_0 = self.input.LA(1)

                    if (LA9_0 == 26) :
                        alt9 = 1


                    if alt9 == 1:
                        # FCL.g:185:5: defuzzify_block
                        pass 
                        self._state.following.append(self.FOLLOW_defuzzify_block_in_function_block_body293)
                        self.defuzzify_block()

                        self._state.following.pop()


                    else:
                        break #loop9


                # FCL.g:186:5: ( rule_block )*
                while True: #loop10
                    alt10 = 2
                    LA10_0 = self.input.LA(1)

                    if (LA10_0 == 28) :
                        alt10 = 1


                    if alt10 == 1:
                        # FCL.g:186:5: rule_block
                        pass 
                        self._state.following.append(self.FOLLOW_rule_block_in_function_block_body300)
                        self.rule_block()

                        self._state.following.pop()


                    else:
                        break #loop10


                # FCL.g:187:5: ( option_block )*
                while True: #loop11
                    alt11 = 2
                    LA11_0 = self.input.LA(1)

                    if (LA11_0 == 30) :
                        alt11 = 1


                    if alt11 == 1:
                        # FCL.g:187:5: option_block
                        pass 
                        self._state.following.append(self.FOLLOW_option_block_in_function_block_body307)
                        self.option_block()

                        self._state.following.pop()


                    else:
                        break #loop11






            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return 

    # $ANTLR end "function_block_body"


    # $ANTLR start "fuzzify_block"
    # FCL.g:190:1: fuzzify_block : 'FUZZIFY' variable_name ( linguistic_term[$variable_name.text] )* 'END_FUZZIFY' ;
    def fuzzify_block(self, ):

        variable_name7 = None


        try:
            try:
                # FCL.g:191:3: ( 'FUZZIFY' variable_name ( linguistic_term[$variable_name.text] )* 'END_FUZZIFY' )
                # FCL.g:192:5: 'FUZZIFY' variable_name ( linguistic_term[$variable_name.text] )* 'END_FUZZIFY'
                pass 
                self.match(self.input, 24, self.FOLLOW_24_in_fuzzify_block325)
                self._state.following.append(self.FOLLOW_variable_name_in_fuzzify_block331)
                variable_name7 = self.variable_name()

                self._state.following.pop()
                # FCL.g:194:5: ( linguistic_term[$variable_name.text] )*
                while True: #loop12
                    alt12 = 2
                    LA12_0 = self.input.LA(1)

                    if (LA12_0 == 32) :
                        alt12 = 1


                    if alt12 == 1:
                        # FCL.g:194:5: linguistic_term[$variable_name.text]
                        pass 
                        self._state.following.append(self.FOLLOW_linguistic_term_in_fuzzify_block337)
                        self.linguistic_term(((variable_name7 is not None) and [self.input.toString(variable_name7.start,variable_name7.stop)] or [None])[0])

                        self._state.following.pop()


                    else:
                        break #loop12


                self.match(self.input, 25, self.FOLLOW_25_in_fuzzify_block345)




            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
        finally:

            pass

        return 

    # $ANTLR end "fuzzify_block"


    # $ANTLR start "defuzzify_block"
    # FCL.g:198:1: defuzzify_block : 'DEFUZZIFY' f_variable_name ( linguistic_term[$f_variable_name.text] )* accumulation_method defuzzification_method[$f_variable_name.text] ( default_value[$f_variable_name.text] )? ( range )? 'END_DEFUZZIFY' ;
    def defuzzify_block(self, ):

        f_variable_name8 = None

